--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>News Analyzer</title>
     <link
       rel="stylesheet"
-      href="styles/main.ce072316aeb47c88070e.css"
+      href="styles/main.1cb9d2ad2496b98a570e.css"
     />
     <link rel="shortcut icon" href="./images/favicon.ico" />
   </head>
@@ -23,51 +23,68 @@
           alt="Fedor Lukhmanov,
 author"
         /><h1 class="page__title">Fedor Lukhmanov</h1
-        ><h2 class="page__subtitle"
-          >Frontend Developer | React + Redux</h2
-        ></header
+        ><h2 class="page__subtitle">Frontend Developer</h2></header
       >
       <main
         ><section class="section"
           ><h3 class="section__title">Portfolio</h3
           ><ul class="section__list"
             ><li class="section__list-element"
-              >News Analyzer (responsive layout):<a
+              ><span class="section__list-text"
+                >"News Analyzer" - responsive layout</span
+              ><a
                 class="section__link"
                 href="https://1ebobski.github.io/news-analyzer/"
-                >project itself</a
+                >web</a
               >|<a
                 class="section__link"
                 href="https://github.com/1ebobski/news-analyzer"
-                >github repository</a
+                >repo</a
               ></li
             ><li class="section__list-element"
-              >React Burger (React + Redux):<a
+              ><span class="section__list-text"
+                >"React Burger" - React + Redux</span
+              ><a
                 class="section__link"
                 href="https://1ebobski.github.io/react-burger"
-                >project itself</a
+                >web</a
               >|<a
                 class="section__link"
                 href="https://github.com/1ebobski/react-burger"
-                >github repository</a
+                >repo</a
               ></li
             >
           </ul></section
+        >
+        <section class="section"
+          ><h3 class="section__title">Stack</h3>
+          <p class="section__paragraph"
+            >HTML, CSS, JS, TS, React, Redux, RTK.</p
+          ></section
         ><section class="section"
           ><h3 class="section__title">Education</h3>
           <p class="section__paragraph"
             >Graduated from Yandex.Practicum Junior frontend developer course,
-            undergoing React-developer course</p
+            undergoing React-developer course. Studied Physics in University.</p
           ></section
         >
         <section class="section"
-          ><h3 class="section__title">Experience</h3></section
-        >
+          ><h3 class="section__title">Non-dev background</h3></section
+        ><p class="section__paragraph"
+          >I have a 5 year experience in UX field. Worked for Offside Gaming as
+          UX-analyst. Company provided betting solutions for businesses all over
+          the world and I took part in whole product developing from tech reqs
+          composition to top-management presentations. Currently working in
+          Open-broker brokarage company in conducting UX-researches and web
+          experiments.
+        </p>
         <section class="section"
           ><h3 class="section__title">About</h3
           ><p class="section__paragraph"
-            >Graduated from Yandex.Practicum Junior frontend developer course,
-            undergoing React-developer course</p
+            >Have great communication skills and a fast learner. Eager for
+            interface perfection, beauty and user experience. Love sports and
+            competing in particular. Casually do grappling and yoga at the
+            moment.</p
           ></section
         ></main
       >
