added linkedin and email

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="News Analyzer dynamic web-site" />
+    <meta name="description" content="CV" />
     <meta name="author" content="Fedor Lukhmanov" />
 
-    <title>News Analyzer</title>
+    <title>CV Fedor Lukhmanov</title>
     <link
       rel="stylesheet"
       href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
@@ -23,7 +23,16 @@
           alt="Fedor Lukhmanov,
 author"
         /><h1 class="page__title">Fedor Lukhmanov</h1
-        ><h2 class="page__subtitle">Frontend Developer</h2></header
+        ><h2 class="page__subtitle">Frontend Developer</h2
+        ><div
+          ><a
+            class="page__link"
+            href="https://www.linkedin.com/in/fedorlukhmanov/"
+            >linkedin</a
+          ><br /><a class="page__link" href="mailto:1ebobski@proton.me"
+            >email</a
+          ></div
+        ></header
       >
       <main
         ><section class="section"
@@ -59,7 +68,7 @@ author"
         <section class="section"
           ><h3 class="section__title">Stack</h3>
           <p class="section__paragraph"
-            >HTML, CSS, JS, TS, React, Redux, RTK.</p
+            >html, css, js, ts, react, redux, rtk, git, npm, webpack.</p
           ></section
         ><section class="section"
           ><h3 class="section__title">Education</h3>
