--- a/src/index.html
+++ b/src/index.html
@@ -34,18 +34,14 @@
     />
 
     <title>CV Fedor Lukhmanov</title>
-    <link
-      rel="stylesheet"
-      href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
-    />
-    <link rel="shortcut icon" href="<%=require('./images/favicon.ico' )%>" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img
           class="header__photo"
-          src="<%=require('./images/photo.jpg')%>"
+          src="images/photo.jpg"
           alt="Fedor Lukhmanov"
           loading="lazy"
         />
@@ -233,6 +229,5 @@
       </main>
       <footer class="footer">Fedor Lukhmanov 2025</footer>
     </div>
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
   </body>
 </html>
