Modernize webpack config: asset/resource for images/fonts, conditional CSS loader for dev/prod, copy-webpack-plugin for static images, relative asset paths for portability, devServer on port 3000, and notes for future React/TS migration. Fix font/image/style loading for all scenarios.

--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,14 @@
     />
 
     <title>CV Fedor Lukhmanov</title>
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img
           class="header__photo"
-          src="images/photo.jpg"
+          src="assets/images/photo.jpg"
           alt="Fedor Lukhmanov"
           loading="lazy"
         />
