--- a/index.html
+++ b/index.html
@@ -1,238 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Frontend developer, portfolio, CV, React developer"
-    />
-    <meta name="author" content="Fedor Lukhmanov" />
-    <meta name="robots" content="index, follow" />
-
-    <meta property="og:title" content="CV Fedor Lukhmanov" />
-    <meta
-      property="og:description"
-      content="Frontend developer, portfolio, CV, React developer"
-    />
-    <meta
-      property="og:image"
-      content="https://1bbsk1.github.io/cv/images/photo.jpg"
-    />
-    <meta property="og:url" content="https://1bbsk1.github.io/cv/" />
-    <meta property="og:type" content="website" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CV Fedor Lukhmanov" />
-    <meta
-      name="twitter:description"
-      content="Frontend developer, portfolio, CV, React developer"
-    />
-    <meta
-      name="twitter:image"
-      content="https://1bbsk1.github.io/cv/images/photo.jpg"
-    />
-
-    <title>CV Fedor Lukhmanov</title>
-    <link
-      rel="stylesheet"
-      href="styles/main.1e1c325bdbfe4466c514.css"
-    />
-    <link rel="shortcut icon" href="./images/favicon.ico" />
-  </head>
-  <body>
-    <div class="page">
-      <header class="header">
-        <img
-          class="header__photo"
-          src="./images/photo.jpg"
-          alt="Fedor Lukhmanov"
-          loading="lazy"
-        />
-        <h1 class="header__title">Fedor Lukhmanov</h1>
-        <h2 class="header__subtitle">Frontend Developer</h2>
-        <nav class="header__links" aria-label="External links navigation">
-          <ul class="header__link-list">
-            <li class="header__link-item">
-              <a
-                class="link"
-                href="https://github.com/1bbsk1"
-                rel="noopener noreferrer"
-                >github</a
-              >
-            </li>
-            <li class="header__link-item">
-              <a
-                class="link"
-                href="https://t.me/fedya_dev"
-                rel="noopener noreferrer"
-                >telegram</a
-              >
-            </li>
-            <li class="header__link-item">
-              <a
-                class="link"
-                href="mailto:1ebobski@pm.me"
-                rel="noopener noreferrer"
-                >email</a
-              >
-            </li>
-            <li class="header__link-item">
-              <a
-                class="link"
-                href="https://instagram.com/1bbsk1"
-                rel="noopener noreferrer"
-                >instagram</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <section class="portfolio">
-          <h3 class="section-title">Portfolio</h3>
-          <ul class="portfolio__list">
-            <li class="portfolio__item">
-              <p class="portfolio__text">"News Analyzer" - responsive layout</p>
-              <div class="portfolio__links">
-                <a
-                  class="portfolio__link link"
-                  href="https://1bbsk1.github.io/news-analyzer/"
-                  >Live demo</a
-                >
-                <a
-                  class="portfolio__link link"
-                  href="https://github.com/1bbsk1/news-analyzer"
-                  >Code</a
-                >
-              </div>
-            </li>
-            <li class="portfolio__item">
-              <p class="portfolio__text">"React Burger" - React + Redux</p>
-              <div class="portfolio__links">
-                <a
-                  class="portfolio__link link"
-                  href="https://1bbsk1.github.io/react-burger"
-                  >Live demo</a
-                >
-                <a
-                  class="portfolio__link link"
-                  href="https://github.com/1bbsk1/react-burger"
-                  >Code</a
-                >
-              </div>
-            </li>
-          </ul>
-        </section>
-        <section class="stack">
-          <h3 class="section-title">Stack</h3>
-          <ul class="stack__list">
-            <li class="stack__item">html</li>
-            <li class="stack__item">css</li>
-            <li class="stack__item">js</li>
-            <li class="stack__item">ts</li>
-            <li class="stack__item">react</li>
-            <li class="stack__item">redux</li>
-            <li class="stack__item">rtk</li>
-            <li class="stack__item">git</li>
-            <li class="stack__item">npm</li>
-            <li class="stack__item">webpack</li>
-          </ul>
-        </section>
-        <section class="education">
-          <h3 class="section-title">Education</h3>
-          <ul class="education__list">
-            <li class="education__item">
-              <span class="education__school">Moscow State University</span>
-              <span class="education__date">2009-2015</span>
-              <span class="education__course">Physics</span>
-            </li>
-            <li class="education__item">
-              <span class="education__school">ESADE Business School</span>
-              <span class="education__date">2015-2016</span>
-              <span class="education__course"
-                >Masters in International Management</span
-              >
-            </li>
-            <li class="education__item">
-              <span class="education__school">Yandex.Practicum</span>
-              <span class="education__date">2020</span>
-              <span class="education__course">Junior Frontend Developer</span>
-            </li>
-            <li class="education__item">
-              <span class="education__school">Yandex.Practicum</span>
-              <span class="education__date">2022</span>
-              <span class="education__course">React Developer</span>
-            </li>
-          </ul>
-        </section>
-        <section class="work">
-          <h3 class="section-title">Work experience</h3>
-          <ul class="work__list">
-            <li class="work__place">
-              <span class="work__company">Offside Gaming</span>
-              <span class="work__date">May 2017 - Sep 2019</span>
-              <span class="work__position">Analyst</span>
-              <ul class="work__details">
-                <li class="work__details-item">
-                  Developed interactive web applications using a modern
-                  technology stack.
-                </li>
-                <li class="work__details-item">
-                  Worked with Agile/Scrum, planned tasks for a team of 5
-                  frontend developers.
-                </li>
-                <li class="work__details-item">
-                  Implemented new UI features and optimized performance.
-                </li>
-              </ul>
-            </li>
-            <li class="work__place">
-              <span class="work__company">Open-broker</span>
-              <span class="work__date">September 2019 - October 2022</span>
-              <span class="work__position">UX-analyst</span>
-              <ul class="work__details">
-                <li class="work__details-item">
-                  Launched and analyzed A/B tests, improving user experience.
-                </li>
-                <li class="work__details-item">
-                  Developed and implemented an automated tariff selection tool.
-                </li>
-                <li class="work__details-item">
-                  Created an interface for UX reports.
-                </li>
-              </ul>
-            </li>
-            <li class="work__place">
-              <span class="work__company">ADN Agency</span>
-              <span class="work__date">February 2024 - July 2024</span>
-              <span class="work__position">Project Manager</span>
-              <ul class="work__details">
-                <li class="work__details-item">
-                  Coordinated tasks for developing new functionality and bug
-                  fixes on e-commerce websites.
-                </li>
-                <li class="work__details-item">
-                  Improved UX, implemented UI changes based on user testing.
-                </li>
-                <li class="work__details-item">
-                  Worked with Figma, collaborated with developers and designers.
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </section>
-        <section class="about">
-          <h3 class="about__title section-title">About</h3>
-          <p class="about__text">
-            I have great communication skills and am a fast learner. Eager for
-            interface usability and simplicity. Love bodily activities like
-            brazilian jiu-jitsu and yoga.
-          </p>
-        </section>
-      </main>
-      <footer class="footer">Fedor Lukhmanov 2025</footer>
-    </div>
-    <script src="scripts/main.048dd97f94bbfcb260a5.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Frontend developer, portfolio, CV, React developer"/><meta name="author" content="Fedor Lukhmanov"/><meta name="robots" content="index, follow"/><meta property="og:title" content="CV Fedor Lukhmanov"/><meta property="og:description" content="Frontend developer, portfolio, CV, React developer"/><meta property="og:image" content="https://1bbsk1.github.io/cv/images/photo.jpg"/><meta property="og:url" content="https://1bbsk1.github.io/cv/"/><meta property="og:type" content="website"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:title" content="CV Fedor Lukhmanov"/><meta name="twitter:description" content="Frontend developer, portfolio, CV, React developer"/><meta name="twitter:image" content="https://1bbsk1.github.io/cv/images/photo.jpg"/><title>CV Fedor Lukhmanov</title><link rel="shortcut icon" href="assets/images/favicon.ico"/><script defer="defer" src="scripts/main.31d6cfe0d16ae931b73c.js"></script><link href="styles/main.54153ff9b5d1f570efef.css" rel="stylesheet"></head><body><div class="page"><header class="header"><img class="header__photo" src="assets/images/photo.jpg" alt="Fedor Lukhmanov" loading="lazy"/><h1 class="header__title">Fedor Lukhmanov</h1><h2 class="header__subtitle">Frontend Developer</h2><nav class="header__links" aria-label="External links navigation"><ul class="header__link-list"><li class="header__link-item"><a class="link" href="https://github.com/1bbsk1" rel="noopener noreferrer">github</a></li><li class="header__link-item"><a class="link" href="https://t.me/fedya_dev" rel="noopener noreferrer">telegram</a></li><li class="header__link-item"><a class="link" href="mailto:1ebobski@pm.me" rel="noopener noreferrer">email</a></li><li class="header__link-item"><a class="link" href="https://instagram.com/1bbsk1" rel="noopener noreferrer">instagram</a></li></ul></nav></header><main><section class="portfolio"><h3 class="section-title">Portfolio</h3><ul class="portfolio__list"><li class="portfolio__item"><p class="portfolio__text">"News Analyzer" - responsive layout</p><div class="portfolio__links"><a class="portfolio__link link" href="https://1bbsk1.github.io/news-analyzer/">Live demo</a> <a class="portfolio__link link" href="https://github.com/1bbsk1/news-analyzer">Code</a></div></li><li class="portfolio__item"><p class="portfolio__text">"React Burger" - React + Redux</p><div class="portfolio__links"><a class="portfolio__link link" href="https://1bbsk1.github.io/react-burger">Live demo</a> <a class="portfolio__link link" href="https://github.com/1bbsk1/react-burger">Code</a></div></li></ul></section><section class="stack"><h3 class="section-title">Stack</h3><ul class="stack__list"><li class="stack__item">html</li><li class="stack__item">css</li><li class="stack__item">js</li><li class="stack__item">ts</li><li class="stack__item">react</li><li class="stack__item">redux</li><li class="stack__item">rtk</li><li class="stack__item">git</li><li class="stack__item">npm</li><li class="stack__item">webpack</li></ul></section><section class="education"><h3 class="section-title">Education</h3><ul class="education__list"><li class="education__item"><span class="education__school">Moscow State University</span> <span class="education__date">2009-2015</span> <span class="education__course">Physics</span></li><li class="education__item"><span class="education__school">ESADE Business School</span> <span class="education__date">2015-2016</span> <span class="education__course">Masters in International Management</span></li><li class="education__item"><span class="education__school">Yandex.Practicum</span> <span class="education__date">2020</span> <span class="education__course">Junior Frontend Developer</span></li><li class="education__item"><span class="education__school">Yandex.Practicum</span> <span class="education__date">2022</span> <span class="education__course">React Developer</span></li></ul></section><section class="work"><h3 class="section-title">Work experience</h3><ul class="work__list"><li class="work__place"><span class="work__company">Offside Gaming</span> <span class="work__date">May 2017 - Sep 2019</span> <span class="work__position">Analyst</span><ul class="work__details"><li class="work__details-item">Developed interactive web applications using a modern technology stack.</li><li class="work__details-item">Worked with Agile/Scrum, planned tasks for a team of 5 frontend developers.</li><li class="work__details-item">Implemented new UI features and optimized performance.</li></ul></li><li class="work__place"><span class="work__company">Open-broker</span> <span class="work__date">September 2019 - October 2022</span> <span class="work__position">UX-analyst</span><ul class="work__details"><li class="work__details-item">Launched and analyzed A/B tests, improving user experience.</li><li class="work__details-item">Developed and implemented an automated tariff selection tool.</li><li class="work__details-item">Created an interface for UX reports.</li></ul></li><li class="work__place"><span class="work__company">ADN Agency</span> <span class="work__date">February 2024 - July 2024</span> <span class="work__position">Project Manager</span><ul class="work__details"><li class="work__details-item">Coordinated tasks for developing new functionality and bug fixes on e-commerce websites.</li><li class="work__details-item">Improved UX, implemented UI changes based on user testing.</li><li class="work__details-item">Worked with Figma, collaborated with developers and designers.</li></ul></li></ul></section><section class="about"><h3 class="about__title section-title">About</h3><p class="about__text">I have great communication skills and am a fast learner. Eager for interface usability and simplicity. Love bodily activities like brazilian jiu-jitsu and yoga.</p></section></main><footer class="footer">Fedor Lukhmanov 2025</footer></div></body></html>
